--- a/templates/clubs.html
+++ b/templates/clubs.html
@@ -12,9 +12,9 @@
       <div class="p-5 mb-4 bg-light rounded-3" style="background-image: url('../static/images/kennedy.png')">
         <div class="container-fluid py-5">
           <h2 class="display-6 fw-bold">Design Teams</h2>
-          <p>I've harboured an interest in space for a long time, and begged my parents to take me to the Kennedy Space Center in 2019, which was my favourite trip of all time. Thus, when I got to Waterloo, I had to join some space related teams. Currently I'm a member of Waterloo Orbital and Waterloo Rocketry.</p>
-          <p>On Orbital I do more electrical/circuit related work. I learned how to properly source components, how to use Altium, and a lot about MOSFETs and load switch circuits which was what I worked on for the Electrical Power Systems team this past term.</p>
-          <p>I did more mechanical related work on Rocketry. Through contributing to the Rogallo Wing design, I gained practice doing stress tests on SolidWorks and expanded my knowledge of design principles.</p>
+          <p>I've harboured an interest in space for a long time, and finally convinced my parents to take me to the Kennedy Space Center in 2019, which easily became my favourite trip of all time. Thus, when I got to Waterloo, I had to join some space related teams. Currently I'm a member of Waterloo Orbital and Waterloo Rocketry.</p>
+          <p>On UW Orbital I do electrical/circuit related work. I learned how to properly source components, how to use Altium, and a lot about MOSFETs and load switch circuits which was what I worked on for the Electrical Power Systems team this past term.</p>
+          <p>I do more mechanical related work on UW Rocketry. Through contributing to the Rogallo Wing design, I gained practice doing stress tests on SolidWorks and expanded my knowledge of design principles.</p>
         </div>
       </div>
   
@@ -22,14 +22,14 @@
         <div class="col-md-6">
           <div class="h-100 p-5 text-white bg-dark rounded-3" style="background-image: url('../static/images/tds.png'); background-repeat: no-repeat; background-size: 100%;">
             <h2 class="display-6 fw-bold">The Debtless Students</h2>
-            <p>When I recieved the $100,000 Schulich Leader Scholarship, I knew wanted to help other hardworking students feel the same gratitude and excitement that I was feeling. Thus, I joined an organization called the Debtless Students made up of Schulich Leaders, Loran Scholars, TD Scholarship winners, and more, who’s goal aligned with my own. As a Scholarship Mentor, I help my mentees with essay and application content, find scholarships for them, and guide them through the university and scholarship application process. I also host webinars with my fellow mentors on the team.</p>
+            <p>When I recieved the $100,000 Schulich Leader Scholarship, I knew wanted to help other hardworking students feel the same gratitude and excitement that I was feeling. Thus, I joined an organization called the Debtless Students made up of Schulich Leaders, Loran Scholars, TD Scholarship winners, and more, whose goals aligned with my own. As a Scholarship Mentor, I help my mentees with essay and application content, help them find scholarships that suit them, and guide them through the university and scholarship application process. I also co-host webinars with fellow mentors on our team.</p>
             <a class="btn btn-primary" href="https://thedebtlessstudents.org/" role="button">The Debtless Students</a>
           </div>
         </div>
         <div class="col-md-6">
           <div class="h-100 p-5 bg-light border rounded-3" style="background-image: url('../static/images/uw.png'); background-repeat: no-repeat; background-size: 100%;">
             <h2 class="display-6 fw-bold">Engineering Ambassadors</h2>
-            <p>I became an engineering ambassador this past term and had a lot of fun connecting with prospective students and answering their questions. I remember attending open houses and using university resources like EngChats last year when I had a never ending list of questions, and was so happy to get well thought out answers from those ambassadors, that I wanted to be on the other side of those chats this year, and help some younger students out. I often meet with students over video chats to answer all their questions, and ran a chat booth this year during the Waterloo open house.</p>
+            <p>I became an engineering ambassador this past term and had a lot of fun connecting with prospective students and helping them understand more about Waterloo Engineering. I remember attending open houses and asking upper years a bunch of questions last year, and was so happy to recieve well thought out answers from them - which made me want to be on the other side of those chats this year. I often meet with students over video calls to answer all their questions, and also ran a chat booth this year during the Waterloo open house.</p>
             <a class="btn btn-primary" href="https://uwaterloo.ca/engineering-student-ambassadors/" role="button">UW Eng Ambassadors</a>
           </div>
         </div>
@@ -38,7 +38,7 @@
       <div class="p-5 mb-4 bg-light rounded-3" style="background-image: url('../static/images/team.png'); background-repeat: no-repeat; background-size: 100%;">
         <div class="container-fluid py-5">
           <h2 class="display-6 fw-bold">... and more!</h2>
-          <p>Before entering university, my most prominent extracurricular activities included volunteering at the YMCA Employment Resource Centre, volunteering as a MiWay (Mississauga Transit) Ambassador, being the Deputy Prime Minister on Student Council, being a FIRST Robotics Team member, and being a member of the St. Vincent de Paul Society where we packaged and delivered food to the less fortunate. My work in the YMCA Resource Centre earned me an <b>Ontario Volunteer Service Award</b>, which I am very proud of.</p>
+          <p>Before entering university, my most prominent extracurricular activities included volunteering at the YMCA Employment Resource Centre, volunteering as a MiWay (Mississauga Transit) Ambassador, being the Deputy Prime Minister on Student Council, being a FIRST Robotics Team member, and being a member of the St. Vincent de Paul Society where we packaged and delivered food to the less fortunate. My work at the YMCA Resource Centre earned me an <b>Ontario Volunteer Service Award</b>, which I am very proud of.</p>
         </div>
       </div>
 
