--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="https://github.com/shanayabarretto">Github</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume/Portfolio</a>
+              <a class="nav-link" href="https://schulichleaders10.com/students/shanaya-barretto/">Schulich Profile</a>
             </li>
           </ul>
         </div>
