--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,7 +6,7 @@
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light">Projects</h1>
-          <p class="lead">This is a collection of engineering related projects I have worked on in the past or am currently working on. I have learned so much from these projects, and I am really proud of how they turned out.</p>
+          <p class="lead">This is a collection of engineering related projects I have worked on in the past or am currently working on. I have learned so much from these projects, and I am really proud of the final results.</p>
         </div>
       </div>
     </section>
@@ -20,7 +20,7 @@
               <img src="../static/images/cpr.jpg" class="bd-placeholder-img card-img-top" alt="Photo of CPR Guidance Tool PCB">
               <div class="card-body">
                 <h4><a href="#" class="link-primary">CPR Guidance Tool</a></h4>
-                <p class="card-text">The idea for this project was given to me by one of my teachers during the pandemic. It is a circuit board with an attached pressure sensor that tells the user via LEDs whether their CPR compressions are of the right speed and pressure. I designed the board using eagle, printed it, drilled it, soldered it, and programmed it using Assembly Language.</p>
+                <p class="card-text">The idea for this project was given to me by one of my teachers in Grade 12. It is a circuit board with an attached pressure sensor that tells the user via LEDs whether their CPR compressions are of the right speed and pressure. I designed the board using eagle, printed it, drilled it, soldered it, and programmed it using Assembly Language.</p>
                 <div class="d-flex justify-content-between align-items-center">
                 </div>
               </div>
@@ -31,7 +31,7 @@
               <img src="../static/images/g2.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot from the G2 Gear Up! Game. Car at a red light">
               <div class="card-body">
                 <h4><a href="#" class="link-primary">G2 Gear Up!</a></h4>
-                <p class="card-text">My final project for Harvard's CS50x course was G2 Gear Up! which I wrote using Lua. When learning to drive, I had trouble remembering safety checks (mirror, signal, shoulder, etc.) so I made this game to help me. It places you in a common on road scenario and allows you to practice maneuvering through the situation safely. It helped me obtain my G2!</p>
+                <p class="card-text">My final project for Harvard's CS50x course was 'G2 Gear Up!' which I used Lua to create. When learning to drive, I had trouble remembering safety checks (mirror, signal, shoulder, etc.) so I made this game to help me. It places you in a common on road scenario and allows you to practice maneuvering through the situation safely. It helped me obtain my G2!</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
                 </div>
@@ -57,8 +57,21 @@
               <img src="../static/images/programrobot.jpg" class="bd-placeholder-img card-img-top" alt="Small robot">
   
               <div class="card-body">
-                <h4>Obstacle Course Programming</h4>
-                <p class="card-text">As might be inferred by the engineering program I chose, I really like working with robots. In high school, my team was the first ever to complete this project. We used C to have the robot follow lines, pickup objects, and read barcodes. We completed a similar challenge last semester during Tron Design Days. </p>
+                <h4><a href="#" class="link-primary">Obstacle Course Programming</a></h4>
+                <p class="card-text">As might be inferred by the engineering program I chose, I really like robots. In high school, my team was the first to complete this project in course history. We used C to have the robot follow lines, pickup objects, and read barcodes. We conquered a similar challenge last semester during our Design Days.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="../static/images/robot.jpg" class="bd-placeholder-img card-img-top" alt="Robot designed on SolidEdge">
+  
+              <div class="card-body">
+                <h4>Robot Design</h4>
+                <p class="card-text">In my tech design class, we picked a FIRST Lego League competition prompt and designed the optimal robot for it, allowing me to become comfortable with 3D modelling software. I focused on the design of the wheels (which allow the robot to move both horizontally and vertically easily) and overall assembly. </p>
                 <div class="d-flex justify-content-between align-items-center">
                   
                 </div>
@@ -80,25 +93,11 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/robot.jpg" class="bd-placeholder-img card-img-top" alt="Robot designed on SolidEdge">
-  
-              <div class="card-body">
-                <h4>Robot Design</h4>
-                <p class="card-text">In my tech design class, we picked a FIRST Lego League competition prompt and designed the optimal robot for it, allowing me to become comfortable with 3d modelling software. I focused on the design of the wheels (which allow the robot to move both horizontally and vertically easily) and overall assembly. </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  
-                </div>
-              </div>
-            </div>
-          </div>
-  
-          <div class="col">
-            <div class="card shadow-sm">
               <img src="../static/images/tn.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot of sleep tracking app">
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Tranquil Nights</a></h4>
-                <p class="card-text">For EngHack last year, my team and I created an app with pygame called Tranquil Nights which functions as a sleep tracker. I also got my first taste of web design during the hackathon, as we made a website to accompany the app. Participating in this hackathon was so much fun, and I intend to attend many more in the future.</p>
+                <p class="card-text">For EngHack last year, my team and I created an app with Pygame called Tranquil Nights which functions as a sleep tracker. I also got my first taste of web design during the hackathon, as we made a website to accompany the app. Participating in this hackathon was so much fun, and I intend to attend many more in the future.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
                 </div>
@@ -111,7 +110,7 @@
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Personal Website</a></h4>
-                <p class="card-text">I wanted to challenge myself to create a more professional looking website, and build up my web development skills, which is why I decided to create this website. I used bootstrap to help with the styling, and am using flask in this project as well. I am committed to continuously improving this website as I learn more about web development.</p>
+                <p class="card-text">I wanted to challenge myself to create a more professional looking website and build up my web development skills, which is why I decided to create this site! I used bootstrap to help with the styling, and am using flask in this project as well. I am committed to continuously improving this website as I learn more about web development.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
                 </div>
@@ -124,7 +123,7 @@
   
               <div class="card-body">
                 <h4><a href="#" class="link-primary">Minigame Mine</a></h4>
-                <p class="card-text">I also consider coding to be one of my hobbies, and often experiment with code just to learn and have fun. Recently, I have been using languages and tools I don’t know or have not used in a while to create minigames. I have used pygame to make tic tac toe, and java & swing to make hangman so far, and I plan to keep extending this list.</p>
+                <p class="card-text">I also consider coding to be one of my hobbies, and often experiment with code just to learn and have fun. Recently, I have been using languages and tools I don't know or have not used in a while to create minigames. So far, I have used Pygame to make tic-tac-toe and Java/Swing to make hangman. I plan to keep adding to this list!</p>
                 <div class="d-flex justify-content-between align-items-center">
                 </div>
               </div>
