--- a/static/style.css
+++ b/static/style.css
@@ -10,35 +10,25 @@
     max-height: 420px;
 }
 
-.hobby {
-    max-width: 150px;
-}
-
-.pages {
-    margin-left: 50px;
-    margin-right: 50px;
-}
-
-.rightdiv {
+#music_text {
     float: left;
     width: 79%;
     margin-left: 40px;
 }
 
-.rightdiv2 {
+.rightdiv_a {
     float: left;
     width: 59%;
     margin-left: 50px;
 }
 
-.rightdiv3 {
+.rightdiv_b {
     float: left;
     width: 20%;
     margin-left: 30px;
 }
 
-
-.leftdiv {
+#em_text {
     float: right;
     width: 79%;
     margin-right: 50px;
