--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -3,7 +3,8 @@
   <br><br><br>
   <div class="wrapper" style="margin-left: 40px; margin-right: 40px;">
     <div class="col-item" style="width: 64%">
-      <h1 style="color: #72A276;">DevOps Software Developer</h1>
+      <a href="https://imaginecommunications.com/"><img src="../static/images/imagine.png"  style="float: right; max-width: 230px; margin-right: 100px; margin-top: 30px;" alt="Imagine Communications Logo"></a>
+      <h1 style="color: #72A276;">DevOps Software Developer</h1> 
       <h2 style="color: #1C6E8C;">Imagine Communications</h2>
     </div>
     <div class="col-item" style="width: 34%">
@@ -12,49 +13,49 @@
     </div>
     <div class="col-item" style="width: 64%">
       <p>
-        I just completed my first co-op at Imagine Communications. 
+        I just completed my first co-op term at Imagine Communications. 
         I learned so much this term, and not just in technical aspects. 
         Being in the workspace (though remotely) allowed me to learn from other professionals by example, 
-        which I found to be incredibly beneficial. I witnessed my coworkers problem solve, and began to use 
-        their techniques when I ran into issues. I also learnt the importance of keeping your workspace and 
-        code organized and neat. I was only able to look at code others wrote and understand it enough to make 
-        additions because they left thorough documentation and heavily commented code behind. Finally, working 
-        in this team environment definitely allowed me to become a better communicator. Attending stand up 
+        which I found to be incredibly beneficial. I witnessed my coworkers <b>problem solve</b>, and began to use 
+        their techniques when I ran into issues. I also learnt the importance of keeping your code neat and
+        <b>organized</b>. I was only able to look at other people's work and understand it enough to make 
+        additions because they left thorough documentation and well commented code behind. Finally, working 
+        in this team environment definitely enabled me to become a better <b>communicator</b>. Attending stand up 
         meetings allowed me to practice speaking clearly and concisely and was something I became increasingly 
         more comfortable with as the term progressed.
       </p>
       <p>
-        I also tried to involve myself in outside of work activities and joined the social comittee. 
-        As part of that team, I helped organize and host a few events like a trivia night and a board game night. 
+        I also wanted to involve myself in out of work activities so I joined the <b>social comittee</b>. 
+        I helped organize and host a few events like a trivia night and a board game night which were a lot of fun. 
+        The community at Imagine was awesome, which was definitely part of the reason I enjoyed this term so much. 
         I hope to continue being involved in similar initiatives in future positions.
       </p>
       <p>
         On the technical side, I became more comfortable with many more frameworks and programming languages. 
-        I worked a lot with Jenkins, Terraform, and Ansible, and became familiar with groovy and YAML file syntax. 
-        I also used a linux machine as my primary dev box, and have become proficient using its command line. 
-        Moreover, I also learned to use tools like docker and kubernetes, which we used for deployments. 
-        Additionally, I spent some time experimenting with powershell cmdlets, and gained experience using 
-        both powershell and C#. Lastly, since it was my first time programming in a team environment, I also 
-        learned to use git, this knowledge is now something I utilize for all of my personal projects. It was 
-        certainly a lot to learn in a short time, but as a result, I find the prospect of learning a large amount 
+        I worked a lot with <b>Jenkins</b>, <b>Terraform</b>, and <b>Ansible</b>, and became familiar with <b>groovy</b> and <b>YAML file syntax</b>. 
+        I also used a <b>linux</b> machine as my primary development box, and have become proficient at using its command line. 
+        Moreover, I also learned to use tools like <b>Docker</b> and <b>Kubernetes</b>, which we used for deployments. 
+        Additionally, I spent some time experimenting with Powershell cmdlets, and gained experience using 
+        both <b>Powershell</b> and <b>C#</b>. Lastly, since it was my first time programming in a team environment, I also 
+        learned to use <b>Git</b>, this knowledge is now something I utilize for all of my projects. It was a lot to learn in a short time, but as a result, I find the prospect of learning a large amount 
         of new things for future roles much less daunting.
       </p>
     </div>
     <div class="col-item" style="width: 34%">
       <p>
         My high school offered a co-op opportunity for all Grade 12 students, which was to be a PATH student, 
-        or Teaching Assistant, for a Grade 9 or 10 class. My favourite classes in high school were my computer 
-        engineering courses, so I decided to become a PATH student for the Grade 10 version of the course. I had 
+        or <b>Teaching Assistant</b>, for a Grade 9 or 10 class. My favourite classes in high school were my <b>computer 
+        engineering</b> courses, so I decided to become a PATH student for the Grade 10 version of the course. I had 
         a lot of fun making lesson plans, teaching my students about computer history in interesting ways, 
         showing them the real world applications of the circuit boards we made, and more. We covered a range 
-        of topics including binary, circuit components, logic gates, basic programming principles, and I pushed 
+        of topics including <b>binary</b>, <b>circuit components</b>, <b>logic gates</b>, <b>basic programming principles</b>, and I pushed 
         them to put their knowledge to use by guiding them to design solar power alarm clock circuits on Tinkercad, 
-        creating a binary counter with MultiMedia Logic, programming robots using VEX resources, and completing other similar projects. 
+        creating a binary counter with MultiMedia Logic, programming robots using VEX Robotics resources, and completing other similar projects. 
       </p>
       <p>
-        My passion for engineering really grew during this time, and it really helped me confirm that this was 
-        the field I wanted to enter. I also learned a lot myself through making each new lesson plan, it was an 
-        experience I am very glad to have had. 
+        My <b>passion for engineering</b> really grew during this time, and it helped me confirm that this was 
+        the field I wanted to enter. I also learned a lot myself while making each new lesson plan, it was a very valuable 
+        experience that I am so glad to have had. 
       </p>
     </div>
   </div> 
@@ -72,7 +73,7 @@
       <div class="card">
         <img src="../static/images/binary.jpg" class="card-img-top" alt="Screenshot from my lesson on binary">
         <div class="card-body">
-          <p class="card-text">Excerpt from the PATH Binary Lesson.</p>
+          <p class="card-text">Excerpt from my PATH binary lesson.</p>
         </div>
       </div>
     </div>
@@ -88,7 +89,7 @@
       <div class="card">
         <img src="../static/images/vex.jpg" class="card-img-top" alt="Snippet of code from VR Vex">
         <div class="card-body">
-          <p class="card-text">Snippet of the VEX Robot code.</p>
+          <p class="card-text">Snippet of the VEX robot code.</p>
         </div>
       </div>
     </div>
