--- a/templates/projects.html
+++ b/templates/projects.html
@@ -19,7 +19,7 @@
             <div class="card shadow-sm">
               <img src="../static/images/cpr.jpg" class="bd-placeholder-img card-img-top" alt="Photo of CPR Guidance Tool PCB">
               <div class="card-body">
-                <h4><a href="#" class="link-primary">CPR Guidance Tool</a></h4>
+                <h4><a href="https://github.com/shanayabarretto/CPRGuidanceTool" class="link-primary">CPR Guidance Tool</a></h4>
                 <p class="card-text">The idea for this project was given to me by one of my teachers in Grade 12. It is a circuit board with an attached pressure sensor that tells the user via LEDs whether their CPR compressions are of the right speed and pressure. I designed the board using eagle, printed it, drilled it, soldered it, and programmed it using Assembly Language.</p>
                 <div class="d-flex justify-content-between align-items-center">
                 </div>
@@ -28,9 +28,9 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img src="../static/images/g2.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot from the G2 Gear Up! Game. Car at a red light">
+              <a href="https://github.com/shanayabarretto/G2GearUp"><img src="../static/images/g2.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot from the G2 Gear Up! Game. Car at a red light"></a>
               <div class="card-body">
-                <h4><a href="#" class="link-primary">G2 Gear Up!</a></h4>
+                <h4><a href="https://youtu.be/wUbRh6zETQI" class="link-primary">G2 Gear Up!</a></h4>
                 <p class="card-text">My final project for Harvard's CS50x course was 'G2 Gear Up!' which I used Lua to create. When learning to drive, I had trouble remembering safety checks (mirror, signal, shoulder, etc.) so I made this game to help me. It places you in a common on road scenario and allows you to practice maneuvering through the situation safely. It helped me obtain my G2!</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
@@ -43,7 +43,7 @@
               <img src="../static/images/backdrops.jpg" class="bd-placeholder-img card-img-top" alt="Chrome extension logo. A pixelart goose.">
   
               <div class="card-body">
-                <h4><a href="#" class="link-primary">Buddy Backdrops</a></h4>
+                <h4><a href="https://github.com/nivey25/Chrome-Extension-Project" class="link-primary">Buddy Backdrops</a></h4>
                 <p class="card-text">My friends (Niveditha Renganathan, Kate Bendall, and Cassandra Hopkins) and I decided to create a Chrome Extension recently. We were inspired by the app Locket and wanted to create an extension that allows friends to share a ‘new tab’ chrome background. For this project, I have been working on the backend side, using flask and SQL to help put it together.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
@@ -57,7 +57,7 @@
               <img src="../static/images/programrobot.jpg" class="bd-placeholder-img card-img-top" alt="Small robot">
   
               <div class="card-body">
-                <h4><a href="#" class="link-primary">Obstacle Course Programming</a></h4>
+                <h4><a href="https://www.youtube.com/watch?v=G-KbAHv5LLk" class="link-primary">Obstacle Course Programming</a></h4>
                 <p class="card-text">As might be inferred by the engineering program I chose, I really like robots. In high school, my team was the first to complete this project in course history. We used C to have the robot follow lines, pickup objects, and read barcodes. We conquered a similar challenge last semester during our Design Days.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
@@ -83,7 +83,7 @@
               <img src="../static/images/morse.jpg" class="bd-placeholder-img card-img-top" alt="Small robot tapping on a wall">
   
               <div class="card-body">
-                <h4><a href="#" class="link-primary">Agent Morse</a></h4>
+                <h4><a href="https://github.com/shanayabarretto/RobotProgramming" class="link-primary">Agent Morse</a></h4>
                 <p class="card-text">For an open ended project last semester, my team and I created a secret mission scenario where our robot, Agent Morse, would help spies escape a dangerous situation. Using C++ we programmed the robot such that when fed a message, it could tap it in morse code to a trapped comrade on the other side of a wall. </p>
                 <div class="d-flex justify-content-between align-items-center">
                   
@@ -96,7 +96,7 @@
               <img src="../static/images/tn.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot of sleep tracking app">
   
               <div class="card-body">
-                <h4><a href="#" class="link-primary">Tranquil Nights</a></h4>
+                <h4><a href="https://youtu.be/wiBenn-ar2A" class="link-primary">Tranquil Nights</a></h4>
                 <p class="card-text">For EngHack last year, my team and I created an app with Pygame called Tranquil Nights which functions as a sleep tracker. I also got my first taste of web design during the hackathon, as we made a website to accompany the app. Participating in this hackathon was so much fun, and I intend to attend many more in the future.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
@@ -109,7 +109,7 @@
               <img src="../static/images/web.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot of website code">
   
               <div class="card-body">
-                <h4><a href="#" class="link-primary">Personal Website</a></h4>
+                <h4><a href="https://github.com/shanayabarretto/shanayabarretto.github.io" class="link-primary">Personal Website</a></h4>
                 <p class="card-text">I wanted to challenge myself to create a more professional looking website and build up my web development skills, which is why I decided to create this site! I used bootstrap to help with the styling, and am using flask in this project as well. I am committed to continuously improving this website as I learn more about web development.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   
@@ -122,7 +122,7 @@
               <img src="../static/images/ttt.jpg" class="bd-placeholder-img card-img-top" alt="Screenshot of tic tac toe game">
   
               <div class="card-body">
-                <h4><a href="#" class="link-primary">Minigame Mine</a></h4>
+                <h4><a href="https://github.com/shanayabarretto/mini-games" class="link-primary">Minigame Mine</a></h4>
                 <p class="card-text">I also consider coding to be one of my hobbies, and often experiment with code just to learn and have fun. Recently, I have been using languages and tools I don't know or have not used in a while to create minigames. So far, I have used Pygame to make tic-tac-toe and Java/Swing to make hangman. I plan to keep adding to this list!</p>
                 <div class="d-flex justify-content-between align-items-center">
                 </div>
