maches site currently

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,21 @@
 {% extends "layout.html" %}
 
 {% block body %}
-	<br><br><br>
-	<h1 class="text-center">Hi!</h1>
-	<p class="lead text-center">My name is Shanaya Barretto, nice to meet you!</p>
-	<p class="text-center">I am a 2021 Schulich Leader studying Mechatronics Engineering at the University of Waterloo.</p>
-	<p class="text-center">I love working with both hardware and software, and strive to solve real world problems with the knowledge I accumulate.</p>
-	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+	<div style="height: 36%; width: 100%; margin: 0;">
+		<br><br><br>
+		<h1 class="text-center">Hi!</h1>
+		<p class="lead text-center">My name is Shanaya Barretto, nice to meet you!</p>
+		<p class="text-center">I am a 2021 Schulich Leader studying Mechatronics Engineering at the University of Waterloo.</p>
+		<p class="text-center">I love working with both hardware and software, and strive to solve real world problems with the knowledge I accumulate.</p>
+	</div>
+	<div style="height: 58%; width: 100%; margin: 0;" id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
 		</div>
-		<div class="carousel-inner">
+		<div style="height: 100%; width: 100%; margin: 0;" class="carousel-inner">
 		  <div class="carousel-item active">
 			<img src="../static/images/campusvisit.jpg" class="d-block w-100" alt="My visit to the University of Waterloo">
 			<div class="carousel-caption d-none d-md-block">
