--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,12 @@
-.carousel .carousel-item {
-    height: 420px;
-}
+html, body { height: 100%; width: 100%; margin: 0; }
+
+.carousel .carousel-item { height: 100% }
   
 .carousel-item img {
-    position: absolute;
-    object-fit:cover;
+    object-fit: cover;
     top: 0;
     left: 0;
-    max-height: 420px;
+    max-height: 100%;
 }
 
 #music_text {
